--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,6 +17,7 @@
 @import "orders";
 @import "products";
 @import "fancybox";
+@import "jquery.ui.all";
 
  /* Custom container */
 .container-fixed {
