--- a/app/views/admin/pages/_form.html.haml
+++ b/app/views/admin/pages/_form.html.haml
@@ -1,7 +1,19 @@
+%ul.nav.nav-tabs
+  %li.active
+    %a(href="#common" data-toggle="tab") Common
+  %li
+    %a(href="#seo" data-toggle="tab") SEO
+
 = simple_form_for [:admin, @page], html: {class: 'form-horizontal' }, wrapper: :bootstrap do |f|
-  = f.input :title
-  = f.input :text
-  = f.input :position, collection: Page::POSITIONS
-  = f.input :enabled
+  .tab-content
+    .tab-pane.active(id="common")
+      = f.input :name
+      = f.input :text, as: :ckeditor, input_html: {ckeditor: {toolbar: [{name: 'Edit', items: ['Cut', 'Copy', 'Paste', 'PasteText', 'PasteFromWord', '-', 'Undo', 'Redo' ]}, {name: 'basicstyles', groups: [ 'basicstyles', 'cleanup' ], items: [ 'Bold', 'Italic', 'Underline', 'Strike', 'Subscript', 'Superscript', '-', 'RemoveFormat' ]} ]}}
+      = f.input :position, collection: Page::POSITIONS
+      = f.input :enabled
+
+    .tab-pane(id="seo")
+      = render partial: 'seo', locals: {f: f}
+
   = f.button :submit
   = link_to 'Cancel', admin_pages_path, class: 'btn btn-default'
