--- a/app/views/admin/products/index.html.haml
+++ b/app/views/admin/products/index.html.haml
@@ -5,14 +5,16 @@
       %th= Product.human_attribute_name(:price)
       %th= Product.human_attribute_name(:count)
       %th= Product.human_attribute_name(:enabled)
-      %th=t '.actions', :default => t("helpers.actions")
+      %th.col-sm-3=t '.actions', :default => t("helpers.actions")
   %tbody
     - @products.each do |product|
       %tr
         %td= product.name
         %td= product.price
         %td= product.count
-        %td= product.enabled
+        %td
+          -if product.enabled
+            %i.glyphicon.glyphicon-ok
         %td
           = link_to t('.edit', :default => t("helpers.links.edit")), edit_admin_product_path(product), :class => 'btn btn-xs btn-default'
           = link_to t('.destroy', :default => t("helpers.links.destroy")), admin_product_path(product), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-danger btn-xs'
