--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -49,6 +49,8 @@
               =link_to 'Categories', admin_categories_path
             %li
               =link_to 'Pages', admin_pages_path
+            %li
+              =link_to 'Promotions', admin_promotions_path
         .col-sm-9
           .page-header
             %h1=@title
