--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,12 +12,11 @@
 @import "bootstrap";
 @import "pages";
 @import "carts";
-@import "categories";
 @import "main";
 @import "orders";
 @import "products";
 @import "fancybox";
-@import "jquery.ui.all";
+@import "jquery.ui.datepicker";
 
  /* Custom container */
 .container-fixed {
