--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -1,5 +1,5 @@
 !!!
-= javascript_include_tag "application"
+= javascript_include_tag "admin/base"
 %html{:lang => "en"}
   %head
     %meta{:charset => "utf-8"}/
@@ -10,7 +10,6 @@
     / Le HTML5 shim, for IE6-8 support of HTML elements
     /[if lt IE 9]
       <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
-    <script type="text/javascript" src="//vk.com/js/api/openapi.js?101"></script>
     = stylesheet_link_tag "application", :media => "all"
     / For third-generation iPad with high-resolution Retina display:
     / Size should be 144 x 144 pixels
