--- a/app/views/admin/products/_form.html.haml
+++ b/app/views/admin/products/_form.html.haml
@@ -23,20 +23,20 @@
       %label.select.optional.col-sm-3.control-label
         Связанные товары
       .col-sm-9
-        %ul.list-group.linked_products
-          - @product.linked_products.each do |linked|
-            %li.list-group-item
-              = linked.name
-              &nbsp;
-              %a.remove_linked_product.btn.btn-danger.btn-xs{id: linked.id, href: "#"}
-                Remove
-              %input{type: "hidden", name: "product[linked_product_ids][]", value: linked.id}
-          %li.list-group-item
+        .linked_products
+          - @product.linked_products.each do |item|
+            .item.row
+              .col-sm-10
+                = item.name
+              .col-sm-2
+                %a.remove_linked_product.btn.btn-danger.btn-xs{id: item.id, href: "#"}
+                  Удалить
+              %input{type: "hidden", name: "product[linked_product_ids][]", value: item.id}
+          .item.search_input
             .btn-group
-              %button.btn.btn-default.btn-xs.dropdown-toggle{"data-toggle" => "dropdown", type: "button"}
-                Добавить связанный товар
-                %span.glyphicon.glyphicon-plus
-              %ul.dropdown-menu{role: "menu"}
+              %button.btn.btn-success.btn-xs.dropdown-toggle{"data-toggle" => "dropdown", type: "button"}
+                Добавить
+              %ul.dropdown-menu{role: "menu", "data-ajax-url"=>'/admin/products/autocomplete'}
                 %li
                   %a
                     .input-group
