--- a/app/views/cart/_cart_items.html.haml
+++ b/app/views/cart/_cart_items.html.haml
@@ -3,10 +3,10 @@
     %tr
       = form_for item, method:'patch' do |f|
         %td
-          =link_to product_path(item.product.id) do
+          =link_to product_path(item.product) do
             =image_tag item.product.images.first.image.url(:thumb)
         %td
-          =link_to item.product.name, product_path(item.product.id)
+          =link_to item.product.name, product_path(item.product)
         %td
           %small
             = number_to_currency(item.product.price, unit:"руб.", :delimiter => " ", :format => "%n %u", :precision => 0)
