--- a/app/views/admin/base/_ajax_selector.html.haml
+++ b/app/views/admin/base/_ajax_selector.html.haml
@@ -6,7 +6,7 @@
       .col-sm-2
         %a{id: item.id, href: "#", class: "remove_#{field_name} btn btn-danger btn-xs"}
           Удалить
-      %input{type: "hidden", name: "product[#{field_name}_ids][]", value: item.id}
+      %input{type: "hidden", name: "#{model_name}[#{field_name}_ids][]", value: item.id}
   .item.search_input
     .btn-group
       %button.btn.btn-success.btn-xs.dropdown-toggle{"data-toggle" => "dropdown", type: "button"}
@@ -22,6 +22,6 @@
 
 :javascript
   $(function() {
-    init_autocomplit("#{field_name}");
+    init_autocomplit("#{field_name}", "#{model_name}");
   });
 
