--- a/app/views/admin/products/_image_fields.html.haml
+++ b/app/views/admin/products/_image_fields.html.haml
@@ -1,3 +1,3 @@
 .nested-fields
-  = f.input :image, as: :image_preview, input_html: {preview_version: :thumb}
-  = link_to_remove_association "remove image", f
+  = f.file_field :image
+  = link_to_remove_association "Удалить", f, class: "btn btn-danger btn-xs"
