--- a/app/views/admin/categories/_form.html.haml
+++ b/app/views/admin/categories/_form.html.haml
@@ -13,8 +13,8 @@
       = f.association :parent
       = f.input :image, as: :image_preview, input_html: {preview_version: :thumb}
 
-      = f.association :linked_categories, as: :check_boxes
-      = f.association :linked_products, as: :check_boxes
+      = f.association :linked_categories
+      = f.association :linked_products
 
     .tab-pane(id="seo")
       = render partial: 'seo', locals: {f: f}
