--- a/app/views/admin/products/_image_fields.html.haml
+++ b/app/views/admin/products/_image_fields.html.haml
@@ -1,3 +1,5 @@
-.nested-fields
-  = f.input :image, as: :image_preview, input_html: {preview_version: :thumb}
-  = link_to_remove_association "remove image", f
+.nested-fields.pull-left
+  .img-thumbnail.preview_wrap
+    = f.input_field :image, as: :image_preview, preview_version: :thumb, class: 'file_upload', label: false 
+    %img.preview
+  = link_to_remove_association raw("<small><strong><p class='text-danger text-center'>Remove</p></small></strong>"), f, {class: 'clearfix'}
