--- a/app/views/products/_show_item.html.haml
+++ b/app/views/products/_show_item.html.haml
@@ -12,15 +12,19 @@
         руб.
       -else
         = "#{product.price} руб."
-      = form_for cart_item do |f|
-        = f.hidden_field :product_id
-        = f.hidden_field :quantity
-        .btn-group
-          %a.btn.btn-primary.btn-sm{type:'button', href:product_path(product, category)}
-            Подробнее
-          %button.btn.btn-success.btn-sm{type:'submit'}
-            %span.glyphicon.glyphicon-shopping-cart
-            Купить
+      -if Settings.hide_count_in_product
+        = form_for cart_item do |f|
+          = f.hidden_field :product_id
+          = f.hidden_field :quantity
+          .btn-group
+            %a.btn.btn-primary.btn-sm{type:'button', href:product_path(product, category)}
+              Подробнее
+            %button.btn.btn-success.btn-sm{type:'submit'}
+              %span.glyphicon.glyphicon-shopping-cart
+              Купить
+      -else
+        %a.btn.btn-primary.btn-sm{type:'button', href:product_path(product, category)}
+          Подробнее
 
 -#<div class="price" style="margin-top:-7px;margin-bottom:-5px;">
 -#<span class="price-old"><?php echo $product['price']; ?></span><br/><span class="price-new"><?php echo $product['special']; ?></span>
