--- a/app/views/admin/pages/_form.html.haml
+++ b/app/views/admin/pages/_form.html.haml
@@ -4,7 +4,7 @@
   %li
     %a(href="#seo" data-toggle="tab") SEO
 
-= simple_form_for [:admin, @page], html: {class: 'form-horizontal' }, wrapper: :bootstrap do |f|
+= simple_form_for [:admin, @page] do |f|
   .tab-content
     .tab-pane.active(id="common")
       = f.input :name
