--- a/app/views/admin/settings/edit.html.haml
+++ b/app/views/admin/settings/edit.html.haml
@@ -1,6 +1,8 @@
-=simple_form_for :settings, html: {class: 'form-horizontal' }, wrapper: :bootstrap do |settings_form|
+=simple_form_for :settings do |settings_form|
   = settings_form.input :site_title, input_html: { value: Settings.site_title }
   = settings_form.input :site_url, input_html: { value: Settings.site_url }
   = settings_form.input :owner_phone, input_html: { value: Settings.owner_phone }
   = settings_form.input :owner_email, input_html: { value: Settings.owner_email }
+  = settings_form.input :disable_categories, as: :boolean, input_html: { checked: Settings.disable_categories }
+  = settings_form.input :hide_count_in_product, as: :boolean, input_html: { checked: Settings.hide_count_in_product }
   = settings_form.button :submit
