--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -9,7 +9,7 @@
       .row
         .col-md-2.col-md-offset4.col-sm-2.col-sm-offset4.prev.icon-angle-up
     .row
-      .col-sm-5.main-img
+      .col-xs-12.col-sm-4.main-img
         =link_to(image_tag(@product.images.first.image.url(:product_page), {itemprop:"image", title:@product.name, alt:@product.name}), @product.images.first.image.url, class:"fancybox") if @product.images.first
 
       -if @product.images.count >1
@@ -28,23 +28,29 @@
               visible: 4
             });
           });
-      .col-sm-5.col-md-5.dl-horizontal
+      .col-xs-12.col-sm-8.dl-horizontal
         / .availability
         /   %dt Наличие
         /   %dd= @product.availability
+        .description{itemprop:"description"}
+          %p
+            %strong Артикул:
+            =@product.sku
+
+          =raw @product.description
+
         = form_for @cart_item do |f|
           .price{itemprop:"offers", itemscope:'', itemtype:"http://schema.org/Offer"}
             = f.hidden_field :product_id
-            = f.hidden_field :quantity
+              
             -if @product.variants.count<=1
-              %dt Цена
-              %dd
-                -if @product.discount_price
-                  %del= @product.price
-                  =@product.discount_price
-                  руб.
-                -else
-                  = "#{@product.price} руб."
+              %strong Цена
+              -if @product.discount_price
+                %del= @product.price
+                =@product.discount_price
+                руб.
+              -else
+                = "#{@product.price} руб."
             -else
               -@product.variants.enabled.each do |variant|
                 .radio
@@ -52,16 +58,25 @@
                     %input(type="radio" value="#{variant.id}" name="variant_id")
                     =raw "#{variant.name} (#{variant.price_str})"
 
+          -if Settings.hide_count_in_product
+            = f.hidden_field :quantity
             %button.btn.btn-sm.btn-primary{type:'submit'}
               %span.glyphicon.glyphicon-shopping-cart
               Купить
+          -else
+            .input-group.buy_button
+              %span.input-group-btn
+                %button.btn.btn-primary{type:'submit'}
+                  %span.glyphicon.glyphicon-shopping-cart
+                  Купить
+              = f.text_field :quantity, class: 'form-control'
+              %span.input-group-addon 
+                шт.  
+
     -if @product.images.count >5
       .row
         .col-sm-2.col-sm-offset4.col-md-2.col-md-offset4.next.icon-angle-down
 
-    .row
-      .description{itemprop:"description"}
-        =raw @product.description
   -if ! @linked.empty?
     #related.row
       %h2 Связанные товары
