--- a/app/assets/stylesheets/admin/admin.css.scss
+++ b/app/assets/stylesheets/admin/admin.css.scss
@@ -13,7 +13,7 @@
 @import "pages";
 @import "products";
 @import "fancybox";
-@import "jquery.ui.datepicker";
+@import "jquery-ui";
 @import "select2";
 @import "select2-bootstrap";
 
