--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -13,30 +13,32 @@ margin-bottom:20px;
   position: relative;
   width: 100%;
 //  float:left;
-  height: 300px;
+  //height: 260px;
 }
 
 .shadow  .price{
 //	height:50px;
 //	padding-top:5px;
-  position: absolute;
-  bottom:10px;
-  left: 0px;
-  right: 0px;
+//  position: absolute;
+//  bottom:10px;
+  //left: 0px;
+  //right: 0px;
+  padding-bottom: 10px;
 }
 
 .shadow  .name{
-	height: 60px;
+//	height: 45px;
   color: #38B0E3;
   font-weight: bold;
-  margin-bottom: 4px;
+//  margin-bottom: 4px;
   text-decoration: none;
 //    vertical-align:middle;
 //	display:table-cell;
 }
 
 .shadow  .image{
-	height: 150px;
+//	height: 150px;
+	padding: 15px;
 }
 
 .shadow .btn2, .shadow .btn2:visited{
@@ -117,4 +119,18 @@ span.new-price{
 
 .free_shipping{
   color: #f00;
+}
+
+.main-img a img {
+    width: 100%;
+    max-width: 300px;
+    padding: 5px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
+.buy_button{
+    max-width:200px;	
+	padding-top: 10px;
 }
