--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -41,7 +41,7 @@
     .container-fixed
       %nav.navbar.text-center
         -Page.in_menu.each do |page|
-          =link_to page.title, page_path(page), class: 'btn btn-primary navbar-btn'
+          =link_to page.name, page_path(page), class: 'btn btn-primary navbar-btn'
         %a.btn.btn-primary.navbar-btn{href: catalog_path}
           Каталог
         %a.btn.btn-primary.navbar-btn{href: cart_path}
@@ -97,7 +97,7 @@
       .container-fixed    
         %nav.navbar.text-center
           -Page.in_footer.each do |page|
-            =link_to page.title, page_path(page), class: 'btn btn-default navbar-btn'
+            =link_to page.name, page_path(page), class: 'btn btn-default navbar-btn'
           %a.btn.btn-default.navbar-btn{href: catalog_path}
             Каталог
           %a.btn.btn-default.navbar-btn{href: cart_path}
